--- a/Aiwe/Views/Meta/_DetailsPart.cshtml
+++ b/Aiwe/Views/Meta/_DetailsPart.cshtml
@@ -175,3 +175,13 @@
   <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.EditShowOnlyColumns)</div>
   <br />
 </div>
+<div class="row">
+  <div class="@ViewBag.LabelClasses"><b>@Html.LabelFor(model => model.ScriptConstructorColumns)</b></div>
+  <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.ScriptConstructorColumns)</div>
+  <br />
+</div>
+<div class="row">
+  <div class="@ViewBag.LabelClasses"><b>@Html.LabelFor(model => model.ScriptColumns)</b></div>
+  <div class="@ViewBag.EditorClass">@Html.DisplayFor(model => model.ScriptColumns)</div>
+  <br />
+</div>
