--- a/Aiwe/Views/Meta/_Filter.cshtml
+++ b/Aiwe/Views/Meta/_Filter.cshtml
@@ -294,4 +294,20 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label class="control-label @ViewBag.LabelClasses">Script Constructor Columns</label>
+    <div class="@ViewBag.EditorClass">
+      @Html.TextAreaFor(model => model.ScriptConstructorColumns, new { @class = "form-control form-control-plus", @rows = 7 })
+      @Html.ValidationMessageFor(model => model.ScriptConstructorColumns, "", new { @class = "text-danger" })
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="control-label @ViewBag.LabelClasses">Script Columns</label>
+    <div class="@ViewBag.EditorClass">
+      @Html.TextAreaFor(model => model.ScriptColumns, new { @class = "form-control form-control-plus", @rows = 8 })
+      @Html.ValidationMessageFor(model => model.ScriptColumns, "", new { @class = "text-danger" })
+    </div>
+  </div>
+
 </div>
