--- a/Aiwe/Views/Common/_CreateEditPart.cshtml
+++ b/Aiwe/Views/Common/_CreateEditPart.cshtml
@@ -1,11 +1,9 @@
 ﻿@using Aibe.Models.Core;
-@using Aibe.Helpers;
 @using Aiwe.Helpers;
 @using Aiwe.Models;
 @using Aiwe.Extensions;
 @using System.Data;
 @using Extension.String;
-@using Extension.Database.SqlServer;
 
 @model CreateEditInfo
 
@@ -28,7 +26,7 @@
           DateTime? dataValueDt = string.IsNullOrWhiteSpace(dataValueRaw) ? null : new DateTime?(DateTime.Parse(dataValueRaw));
           string dataValue = dataValueDt.HasValue ? dataValueDt.Value.ToString("yyyy-MM-dd") : string.Empty;
           string dataTimeName = column.ColumnName + Aibe.DH.CreateEditTimeAppendixName;
-          string dataTimeValue = Model.GetDateTime(dataTimeName, dataValueDt);
+          string dataTimeValue = Model.GetTime(dataTimeName, dataValueDt);
           <input type="hidden" name="@column.ColumnName" class="@controlClasses" value="@dataValue" />
           <input type="hidden" name="@dataTimeName" class="@controlClasses" value="@dataTimeValue" />
         } else { //straight forward to deal with
@@ -142,12 +140,8 @@
                     Model.Meta.GetColumnStaticTemplate(column.ColumnName) : dataValue;
                   ListColumnInfo info = Model.Meta.GetListColumnInfo(column.ColumnName);
                   if (isReadOnly) {
-                    <div id="ro-datavalue-@column.ColumnName">
-                      <input type="hidden" name="@column.ColumnName" id="ro-content-@column.ColumnName" value="@usedDataValue" />
-                    </div>
-                    <span hidden id="ro-span-@column.ColumnName">@lcType</span>
-                    <span hidden id="ro-portion-@column.ColumnName">@Model.CreateEditLabelPortion</span>
-                    <div id="ro-div-@column.ColumnName">
+                    <input type="hidden" name="@column.ColumnName" id="ro-content-@column.ColumnName" value="@usedDataValue" />
+                    <div>
                       @Html.Raw(info.GetHTML(usedDataValue, true))
                     </div>
                   } else {
@@ -170,7 +164,7 @@
                         name="@column.ColumnName" @readOnlyAttrIfReadOnly>@dataValue</textarea> //must be written this way and cannot be auto adjusted. Otherwise the dataValue will be put in the centre of the area (not in the beginning)
             }
           } else { //dropdown
-            List<string> dropdowns = AiweDropDownHelper.GetStaticCreateEditDropDownFor(Model.TableName, column.ColumnName, dataValue, "string");
+            List<string> dropdowns = Model.Meta.GetStaticCreateEditDropDownFor(column.ColumnName, dataValue, "string");
             if (dropdowns == null || dropdowns.Count <= 0) {
               <input type="text" name="@column.ColumnName" class="@controlClasses" value="@dataValue" @readOnlyAttrIfReadOnly/>
             } else if (isReadOnly) {
@@ -211,7 +205,7 @@
             } else if (isReadOnly) {
               <input type="text" name="@column.ColumnName" class="@controlClasses" value="@dataValue" readonly="readonly" />
             } else {
-              List<string> dropdowns = AiweDropDownHelper.GetStaticCreateEditDropDownFor(Model.TableName, column.ColumnName, dataValue);
+              List<string> dropdowns = Model.Meta.GetStaticCreateEditDropDownFor(column.ColumnName, dataValue);
               if (dropdowns == null || dropdowns.Count <= 0) {
                 <input type="number" name="@column.ColumnName" class="@controlClasses" value="@dataValue" @readOnlyAttrIfReadOnly/>
               } else { //number dropdown case
@@ -241,7 +235,7 @@
       DateTime? dataValueDt = string.IsNullOrWhiteSpace(dataValueRaw) ? null : new DateTime?(DateTime.Parse(dataValueRaw));
       string dataValue = dataValueDt.HasValue ? dataValueDt.Value.ToString("yyyy-MM-dd") : string.Empty;
       string dataTimeName = column.ColumnName + Aibe.DH.CreateEditTimeAppendixName;
-      string dataTimeValue = Model.GetDateTime(dataTimeName, dataValueDt);
+      string dataTimeValue = Model.GetTime(dataTimeName, dataValueDt);
 
       if (Model.Meta.IsTimeStampAppliedFor(column.ColumnName, Model.ActionType)) { //if it is timestamp column for the particular column and action, don't use it
         <input type="hidden" name="@column.ColumnName" class="@controlClasses" value="@dataValue" />
