--- a/Aiwe/Views/Common/_Filter.cshtml
+++ b/Aiwe/Views/Common/_Filter.cshtml
@@ -1,5 +1,4 @@
-﻿@using Aiwe.Helpers;
-@using Extension.String;
+﻿@using Extension.String;
 @using System.Data;
 
 @model Aiwe.Models.FilterIndexInfo
@@ -26,7 +25,7 @@
           @if (!Model.Meta.IsFilterDropDownColumn(column.ColumnName)) {
             <input type="text" name="@column.ColumnName" class="form-control form-control-medium-plus" value="@dataValue" />
           } else {
-            List<string> dropdowns = AiweDropDownHelper.GetStaticFilterDropDownFor(Model.TableName, column.ColumnName, "string");
+            List<string> dropdowns = Model.Meta.GetStaticFilterDropDownFor(column.ColumnName, "string");
             if (dropdowns == null || dropdowns.Count <= 0) {
               <input type="text" name="@column.ColumnName" class="form-control form-control-medium-plus" value="@dataValue" />
             } else { //string dropdown case
