--- a/Aiwe/Views/Common/_DetailsPart.cshtml
+++ b/Aiwe/Views/Common/_DetailsPart.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Aiwe.Models;
-@using Aibe.Models.Core;
+@using Aibe.Models;
 @using System.Data;
 @using Extension.String;
 
-@model DetailsInfo
+@model AiweDetailsModel
 
 @{
   ViewBag.LabelClasses = "col-md-2";
