--- a/Aiwe/Views/Common/_Filter.cshtml
+++ b/Aiwe/Views/Common/_Filter.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Extension.String;
 @using System.Data;
 
-@model Aiwe.Models.FilterIndexInfo
+@model Aiwe.Models.AiweFilterIndexModel
 
 @{
   ViewBag.LabelClasses = "col-md-" + Model.FilterLabelPortion;
