--- a/Aiwe/Views/Shared/_SharedNavigation.cshtml
+++ b/Aiwe/Views/Shared/_SharedNavigation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Aibe.Models.Core.NavDataModel
+﻿@model Aibe.Models.NavDataModel
 <div class="row">
   <div class="col-lg-2">
     <span onclick="submitFilterForm('1', '@ViewBag.SenderName')"
