--- a/Aiwe/Views/Role/Index.cshtml
+++ b/Aiwe/Views/Role/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Aiwe.Models.ViewModels
-@using Aibe.Models.Core;
+@using Aibe.Models;
 @model List<RoleViewModel>
 @{
   ViewBag.Title = "Roles";
