--- a/Aiwe/Views/Common/_CreateEditPart.cshtml
+++ b/Aiwe/Views/Common/_CreateEditPart.cshtml
@@ -140,6 +140,9 @@
                       rows="@Model.Meta.GetTextFieldRowSize(cn)"                                                
                       name="@cn" @readOnlyAttrIfReadOnly>@dataValue</textarea> //must be written this way and cannot be auto adjusted. Otherwise the dataValue will be put in the centre of the area (not in the beginning)
           } else if (isPictureColumn) { //picture
+            PictureColumnInfo pcInfo = Model.Meta.GetPictureColumnInfo(cn);
+            string imgSizeStr = pcInfo.IsStretched ? "width:" + pcInfo.Width + "px;height:" + pcInfo.Height + "px" :
+              pcInfo.HeightComesFirst ? "height:" + pcInfo.Height + "px" : "width:" + pcInfo.Width + "px";
             string picColumnName = cn + Aibe.DH.CreateEditPictureLinkAppendixName;
             string picColumnValue = Model.GetData(picColumnName);
             string columnValue = Model.GetData(cn,false);
@@ -147,13 +150,13 @@
               @if (!string.IsNullOrWhiteSpace(columnValue)) { //try to load the image
                 string cid = Model.GetData("Cid");
                 if (columnValue.Contains("/") || columnValue.Contains("\\")) { //longer relative (folder-contain) path
-                  <img src="../../../Images/@columnValue" style="width:100px" id="picturedisplay-@cn" />
+                  <img src="../../../Images/@columnValue" style="@imgSizeStr" id="picturedisplay-@cn" />
                 } else {
-                  <img src="../../../Images/@Model.TableName/@cid/@columnValue" style="width:100px" id="picturedisplay-@cn" />
+                  <img src="../../../Images/@Model.TableName/@cid/@columnValue" style="@imgSizeStr" id="picturedisplay-@cn" />
                 }
                 <button class="common-remove-picture" type="button" id="pictureremove-@cn" @hiddenAttrIfReadOnly>remove</button>
               } else {
-                <img src="" style="width:100px" id="picturedisplay-@cn" hidden="hidden"/>
+                <img src="" style="@imgSizeStr" id="picturedisplay-@cn" hidden="hidden"/>
                 <button class="common-remove-picture" type="button" id="pictureremove-@cn" hidden="hidden">remove</button>
               }
               @if (!isReadOnly) {
