--- a/Aiwe/Views/Common/_CreateEditPart.cshtml
+++ b/Aiwe/Views/Common/_CreateEditPart.cshtml
@@ -1,4 +1,5 @@
-﻿@using Aibe.Models.Core;
+﻿@using Aibe.Helpers;
+@using Aibe.Models.Core;
 @using Aibe.Models;
 @using Aiwe.Helpers;
 @using Aiwe.Models;
@@ -92,7 +93,7 @@
                             <img src="~/@Aibe.DH.DefaultImageFolderName/@scTable.ScInfo.RefTableName/@scCid/@scLink" width="@scTable.ScInfo.GetPictureWidthFor(scColumnName)" title="@scData" />
                           }
                         } else { //if not a picture link column, just print as it is but if it is picture link column... then it is going to be different
-                          @scData
+                          @DateTimeHelper.ProcessPossibleDateTimeString(scData, scTable.IsDateTimeColumn(scColumnName), Aiwe.DH.ScTableDateTimeFormat)
                         }
                       </td>
                     }
