--- a/Aiwe/Views/Common/_DetailsPart.cshtml
+++ b/Aiwe/Views/Common/_DetailsPart.cshtml
@@ -74,7 +74,8 @@
           string dataValue = data.Value ?? string.Empty;
           @Html.Raw(Model.GetListColumnDetailsHTML(data.Key, dataValue));
         } else {
-          <div class="@ViewBag.EditorClass">@DateTimeHelper.ProcessPossibleDateTimeString(data.Value, Model.Meta.IsDateTimeColumn(data.Key), Aiwe.DH.DetailsDateTimeFormat)</div>
+          string dateTimeFormat = Model.Meta.GetCustomDateTimeFormatFor(data.Key, Aibe.DH.DetailsPageName);
+          <div class="@ViewBag.EditorClass">@DateTimeHelper.ProcessPossibleDateTimeString(data.Value, Model.Meta.IsDateTimeColumn(data.Key), dateTimeFormat ?? Aiwe.DH.DetailsDateTimeFormat)</div>
         }
 
       </div>
