--- a/Aiwe/Views/Common/Index.cshtml
+++ b/Aiwe/Views/Common/Index.cshtml
@@ -134,7 +134,7 @@
                   pcInfo.IndexHeightComesFirst ? "height:" + pcInfo.IndexHeight + "px" : "width:" + pcInfo.IndexWidth + "px";
                 <td>
                   @if (val is DBNull || val == null || string.IsNullOrWhiteSpace(val.ToString())) {
-                    <i>[@Aibe.LCZ.NFM_NoPicture]</i>
+                    <i>[@Aibe.LCZ.W_NoPicture]</i>
                   } else if (val.ToString().Contains("/") || val.ToString().Contains("\\")) { //longer relative path
                     <img src="~/@Aibe.DH.DefaultAttachmentFolderName/@val" style="@imgSizeStr" />
                   } else {
